# creative_agent_monorepo

./: .gitignore  CLAUDE.md  Makefile  PAUSE_RESUME_BUGS.md  Procfile  README.md  test_persistent_sse.html
go_backend/: .air.toml  .gitignore  .goreleaser.yml  .mix.json  .opencode.json  .recreate.json  CLAUDE.md  LICENSE  Makefile  Procfile  README.md  go.mod  go.sum  main.go  mix-schema.json  opencode-schema.json  recreate-schema.json
go_backend/cmd/: auth.go  root.go
go_backend/examples/: simple_demo.sh
go_backend/internal/api/: query.go
go_backend/internal/app/: app.go
go_backend/internal/commands/: builtin.go  command.go  errors.go  parser.go  registry.go
go_backend/internal/config/: config.go
go_backend/internal/db/: connect.go  db.go  messages.sql.go  querier.go
go_backend/internal/fileutil/: fileutil.go
go_backend/internal/history/: file.go
go_backend/internal/http/: sse.go  sse_events.go  sse_integration_test.go
go_backend/reference/: Notes-pretty.sdef.xml  anthropic_tool_implementation_analysis.md
go_backend/scripts/: shoreman.sh
recreate_tauri_app/: package-lock.json  package.json  vite.config.ts
recreate_tauri_app/src/: App.css
recreate_tauri_app/src-tauri/: tauri.conf.json
tauri_app/: POSTHOG_EVENTS.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
tauri_app/src/: App.css  App.tsx  main.tsx  vite-console-forward-plugin.ts
tauri_app/src-tauri/: Cargo.toml  tauri.conf.json
tauri_app/src-tauri/capabilities/: default.json  desktop.json
tauri_app/src-tauri/src/: lib.rs  main.rs  sidecar.rs
(+133 files in other folders)
